tests/rosetta/transpiler/Java/adfgvx-cipher.error
compile: exit status 1
/tmp/TestJavaTranspiler_Rosetta_Goldenadfgvx-cipher2681735515/001/Main.java:78: error: incompatible types: int cannot be converted to String
            pairs = appendObj(pairs, new String[]{key.substring(i, i + 1), i});
                                                                           ^
/tmp/TestJavaTranspiler_Rosetta_Goldenadfgvx-cipher2681735515/001/Main.java:86: error: bad operand types for binary operator '>'
                if (pairs[j][0] > pairs[j + 1][0]) {
                                ^
  first type:  String
  second type: String
/tmp/TestJavaTranspiler_Rosetta_Goldenadfgvx-cipher2681735515/001/Main.java:98: error: no suitable method found for of(String)
            res = java.util.stream.IntStream.concat(java.util.Arrays.stream(res), java.util.stream.IntStream.of(pairs[i][1])).toArray();
                                                                                                            ^
    method IntStream.of(int) is not applicable
      (argument mismatch; String cannot be converted to int)
    method IntStream.of(int...) is not applicable
      (varargs mismatch; String cannot be converted to int)
/tmp/TestJavaTranspiler_Rosetta_Goldenadfgvx-cipher2681735515/001/Main.java:131: error: cannot find symbol
        string[][] table = new String[][]{};
        ^
  symbol:   class string
  location: class Main
/tmp/TestJavaTranspiler_Rosetta_Goldenadfgvx-cipher2681735515/001/Main.java:191: error: char cannot be dereferenced
            if ((i == cipherText.length() || cipherText.charAt(i).equals(" "))) {
                                                                 ^
/tmp/TestJavaTranspiler_Rosetta_Goldenadfgvx-cipher2681735515/001/Main.java:205: error: cannot find symbol
        string[][] cols = new String[][]{};
        ^
  symbol:   class string
  location: class Main
/tmp/TestJavaTranspiler_Rosetta_Goldenadfgvx-cipher2681735515/001/Main.java:232: error: cannot find symbol
        string[][] table = new String[][]{};
        ^
  symbol:   class string
  location: class Main
/tmp/TestJavaTranspiler_Rosetta_Goldenadfgvx-cipher2681735515/001/Main.java:269: error: array required, but String found
            plainText = plainText + polybius[rIdx][cIdx];
                                                  ^
8 errors
